Adicionado cadastro de ocorrências

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <legend>Login</legend>
 
                         <div id="tipo-funcionario">
-                            <input type="radio" id="funcionario" name="funcionario" value="bilheteria" checked>
-                            <label for="funcionario">Bilheteria</label>
-                            <input type="radio" id="funcionario" name="funcionario" value="seguranca">
-                            <label for="funcionario">Segurança</label>
+                            <input type="radio" id="bilheteria" name="funcionario" value="bilheteria" checked>
+                            <label for="bilheteria">Bilheteria</label>
+                            <input type="radio" id="seguranca" name="funcionario" value="seguranca">
+                            <label for="seguranca" >Segurança</label>
                             <input type="radio" id="funcionario" name="funcionario" value="funcionario">
                             <label for="funcionario">Funcionário</label>
                         </div>
