Add estrutura relatorio

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                             <label for="bilheteria">Bilheteria</label>
                             <input type="radio" id="seguranca" name="funcionario" value="seguranca">
                             <label for="seguranca" >Segurança</label>
-                            <input type="radio" id="funcionario" name="funcionario" value="funcionario">
-                            <label for="funcionario">Funcionário</label>
+                            <input type="radio" id="relatorio" name="funcionario" value="relatorio">
+                            <label for="relatorio">Relatório</label>
                         </div>
 
                         <p>Credencial: <input type="text" name="user" id = "user" maxlength="11"></p>
